fix footer items on tablet

--- a/webroot/css/responsive.css
+++ b/webroot/css/responsive.css
@@ -995,6 +995,15 @@
 		top: 112px;
 		left: 113px;
 	}
+
+    .row.col-p30 [class*="col-"].business-solution {
+        padding: 0 30px;
+    }
+
+    .row.col-p30 {
+        margin-left: -15px;
+        margin-right: -15px;
+    }
 }
 
 @media (min-width: 992px){
